[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=1.2.5",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-postgres>=3.0.2",
    "pandas>=2.3.3",
    "psycopg-binary>=3.3.2",
    "psycopg-pool>=3.3.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.45",
]
